samples/_failures_safe/1761077954_345623_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f669ebc.c: In function ‘main’:
./samples/SAFE/__tmp_6f669ebc.c:129:5: error: expected declaration or statement at end of input
  129 |     if (hex_len % 2 != 0 || hex_len > MAX_INPUT_SIZE * 2) {
      |     ^~
./samples/SAFE/__tmp_6f669ebc.c:129:5: error: expected declaration or statement at end of input
